[package]
name = "aries-vcx-backchannel"
version = "0.1.0"
edition = "2018"
authors = ["Absa Group Limited", "Hyperledger Indy Contributors <hyperledger-indy@lists.hyperledger.org>"]
description = "Backchannel for aries-vcx"

[dependencies]
actix-web = "4.2.1"
ctrlc = "3.1.6"
derive_more = "0.99.14"
derive_builder = "0.10.2"
clap = { version = "3.2.22", features = ["derive"] }
reqwest = { version = "0.11.9", features = ["json", "multipart", "blocking"] }
rand = "0.6.5"
serde = "1.0.97"
serde_json = "1.0.40"
serde_derive = "1.0.97"
log = "0.4.17"
env_logger = "0.8.1"
once_cell = "1.5.2"
pickledb = "0.4.1"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
futures-util = "0.3.15"
futures = "0.3.15"
aries-vcx = { git = "https://github.com/hyperledger/aries-vcx", rev = "f12c68ec8a0f9556e909cea500d67797b4ddbc15" }
