[package]
name = "aries-vcx-backchannel"
version = "0.1.0"
edition = "2018"
authors = ["Absa Group Limited", "Hyperledger Indy Contributors <hyperledger-indy@lists.hyperledger.org>"]
description = "Backchannel for aries-vcx"

[dependencies]
actix-web = "4.2.1"
derive_more = "0.99.14"
clap = { version = "3.2.22", features = ["derive"] }
reqwest = { version = "0.11.9", features = ["json", "multipart", "blocking"] }
rand = "0.8.5"
serde = "1.0.97"
serde_json = "1.0.40"
serde_derive = "1.0.97"
log = "0.4.17"
env_logger = "0.9.1"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
aries-vcx-agent = { git = "https://github.com/hyperledger/aries-vcx.git", rev = "7a7c65d" }

[profile.release]
debug = 0
panic = 'unwind'
incremental = false
